--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,11 +11,11 @@ add_executable(timer timer.cpp)
 target_link_libraries(timer ${CONAN_LIBS})
 
 # But we could use CMake find_package as well, or link with libraries individually
-#find_package(Boost REQUIRED regex)
+find_package(Boost REQUIRED regex)
 
-#if(Boost_FOUND)
-#  include_directories(${Boost_INCLUDE_DIRS})
-#  target_link_libraries(timer ${Boost_LIBRARIES})
-#endif()
+if(Boost_FOUND)
+  include_directories(${Boost_INCLUDE_DIRS})
+  target_link_libraries(timer ${Boost_LIBRARIES})
+endif()
 	
-#target_link_libraries(timer ${CONAN_LIBS_POCO})
+target_link_libraries(timer ${CONAN_LIBS_POCO})
